--- a/.github/workflows/build_reusable.yml
+++ b/.github/workflows/build_reusable.yml
@@ -119,30 +119,30 @@ jobs:
 
     defaults:
       run:
-        shell: bash -e pipefail {0}
+        shell: zsh -leo pipefail {0}
 
     outputs:
       input_step_key: ${{ steps.var.outputs.input_step_key }}
 
     steps:
-      - name: Check if fnm is installed
-        id: check-fnm
-        run: |
-          if [ -x "$(command -v fnm)" ]; then
-            echo "fnm found."
-            echo "found=true" >> $GITHUB_OUTPUT
-          else
-            echo "fnm not found."
-            echo "found=false" >> $GITHUB_OUTPUT
-          fi
+      # - name: Check if fnm is installed
+      #   id: check-fnm
+      #   run: |
+      #     if [ -x "$(command -v fnm)" ]; then
+      #       echo "fnm found."
+      #       echo "found=true" >> $GITHUB_OUTPUT
+      #     else
+      #       echo "fnm not found."
+      #       echo "found=false" >> $GITHUB_OUTPUT
+      #     fi
 
-      - name: Install fnm
-        if: steps.check-fnm.outputs.found != 'true'
-        run: |
-          curl -fsSL https://fnm.vercel.app/install | bash
-          export PATH="/home/runner/.local/share/fnm:$PATH"
-          echo "/home/runner/.local/share/fnm" >> $GITHUB_PATH
-          fnm env --json | jq -r 'to_entries|map("\(.key)=\(.value|tostring)")|.[]' | xargs -I {} echo "{}" >> $GITHUB_ENV
+      # - name: Install fnm
+      #   if: steps.check-fnm.outputs.found != 'true'
+      #   run: |
+      #     curl -fsSL https://fnm.vercel.app/install |zsh
+      #     export PATH="/home/runner/.local/share/fnm:$PATH"
+      #     echo "/home/runner/.local/share/fnm" >> $GITHUB_PATH
+      #     fnm env --json | jq -r 'to_entries|map("\(.key)=\(.value|tostring)")|.[]' | xargs -I {} echo "{}" >> $GITHUB_ENV
 
       - name: Normalize input step names into path key
         uses: actions/github-script@v7
@@ -261,7 +261,7 @@ jobs:
         # https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsshell
         #
         # We must use a login shell: fnm installation may modify the `.profile`
-        shell: bash -le {0}
+        shell: zsh -le {0}
         timeout-minutes: ${{ inputs.timeout_minutes }}
 
       # This file messes up the tests because it influences the build root autodetection.
