--- a/.github/workflows/build_reusable.yml
+++ b/.github/workflows/build_reusable.yml
@@ -125,24 +125,27 @@ jobs:
       input_step_key: ${{ steps.var.outputs.input_step_key }}
 
     steps:
-      # - name: Check if fnm is installed
-      #   id: check-fnm
-      #   run: |
-      #     if [ -x "$(command -v fnm)" ]; then
-      #       echo "fnm found."
-      #       echo "found=true" >> $GITHUB_OUTPUT
-      #     else
-      #       echo "fnm not found."
-      #       echo "found=false" >> $GITHUB_OUTPUT
-      #     fi
+      - name: Add fnm to PATH
+        run: |
+          echo "/home/runner/.local/share/fnm" >> $GITHUB_PATH
+      - name: Check if fnm is installed
+        id: check-fnm
+        run: |
+          if [ -x "$(command -v fnm)" ]; then
+            echo "fnm found."
+            echo "found=true" >> $GITHUB_OUTPUT
+          else
+            echo "fnm not found."
+            echo "found=false" >> $GITHUB_OUTPUT
+          fi
 
-      # - name: Install fnm
-      #   if: steps.check-fnm.outputs.found != 'true'
-      #   run: |
-      #     curl -fsSL https://fnm.vercel.app/install |zsh
-      #     export PATH="/home/runner/.local/share/fnm:$PATH"
-      #     echo "/home/runner/.local/share/fnm" >> $GITHUB_PATH
-      #     fnm env --json | jq -r 'to_entries|map("\(.key)=\(.value|tostring)")|.[]' | xargs -I {} echo "{}" >> $GITHUB_ENV
+      - name: Install fnm
+        if: steps.check-fnm.outputs.found != 'true'
+        run: |
+          curl -fsSL https://fnm.vercel.app/install |zsh
+          export PATH="/home/runner/.local/share/fnm:$PATH"
+          echo "/home/runner/.local/share/fnm" >> $GITHUB_PATH
+          fnm env --json | jq -r 'to_entries|map("\(.key)=\(.value|tostring)")|.[]' | xargs -I {} echo "{}" >> $GITHUB_ENV
 
       - name: Normalize input step names into path key
         uses: actions/github-script@v7
