--- a/.github/workflows/build_reusable.yml
+++ b/.github/workflows/build_reusable.yml
@@ -153,8 +153,15 @@ jobs:
         with:
           script: |
             core.setOutput('input_step_key', '${{ inputs.stepName }}'.toLowerCase().replaceAll(/[/.]/g, '-').trim('-'));
-      - run: echo "/home/runner/.local/share/fnm" >> $GITHUB_PATH
-      - run: fnm use --install-if-missing ${{ inputs.nodeVersion || env.NODE_LTS_VERSION }}
+      - name: Setup fnm environment
+        run: |
+          echo "/home/runner/.local/share/fnm" >> $GITHUB_PATH
+          eval "$(fnm env --use-on-cd)"
+          echo "FNM_DIR=$HOME/.local/share/fnm" >> $GITHUB_ENV
+          echo "FNM_MULTISHELL_PATH=$HOME/.local/share/fnm" >> $GITHUB_ENV
+          echo "FNM_VERSION_FILE_STRATEGY=local" >> $GITHUB_ENV
+      - name: Use Node version
+        run: fnm use --install-if-missing ${{ inputs.nodeVersion || env.NODE_LTS_VERSION }}
       - run: fnm default ${{ inputs.nodeVersion || env.NODE_LTS_VERSION }}
       - run: node -v
       - name: Prepare corepack
