--- a/.github/workflows/pull_request_stats.yml
+++ b/.github/workflows/pull_request_stats.yml
@@ -23,17 +23,17 @@ env:
   NEXT_DISABLE_SWC_WASM: 1
 
 jobs:
-  build:
-    uses: ./.github/workflows/build_reusable.yml
-    secrets: inherit
-    with:
-      stepName: 'generate-pull-request-stats'
-      uploadSwcArtifact: 'yes'
-      uploadAnalyzerArtifacts: 'yes'
+  # build:
+  #   uses: ./.github/workflows/build_reusable.yml
+  #   secrets: inherit
+  #   with:
+  #     stepName: 'generate-pull-request-stats'
+  #     uploadSwcArtifact: 'yes'
+  #     uploadAnalyzerArtifacts: 'yes'
 
   stats:
     name: PR Stats
-    needs: build
+    # needs: build
     timeout-minutes: 25
     runs-on:
       - 'self-hosted'
