--- a/.github/workflows/pull_request_stats.yml
+++ b/.github/workflows/pull_request_stats.yml
@@ -33,7 +33,7 @@ jobs:
 
   stats:
     name: PR Stats
-    # needs: build
+    needs: build
     timeout-minutes: 25
     runs-on:
       - 'self-hosted'
